@@ -1,3 +1,9 @@
+2005-08-04 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b10
+
+	* Fix: Padding for current flag should belong to the td not img.
+
+	* Change: Added columncount 20 to flags table. removed old unused code.
+
 2005-08-03 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b9
 
 	* Fix: Fix in b7 was not good :-|
